--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "semantic-ui-css": "^2.2.4",
     "vue": "^2.1.0",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.1.3"
   },
   "devDependencies": {
