--- a/PackageTrackingManagement.Persistence/PackageTrackingManagement.Persistence.fsproj
+++ b/PackageTrackingManagement.Persistence/PackageTrackingManagement.Persistence.fsproj
@@ -53,9 +53,14 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="PgSqlPersistence.fs" />
+    <Compile Include="User.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Data">
+      <HintPath>..\packages\FSharp.Data.2.3.2\lib\net40\FSharp.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FSharp.Data.SqlProvider">
       <HintPath>..\packages\SQLProvider.1.0.41\lib\FSharp.Data.SqlProvider.dll</HintPath>
       <Private>True</Private>
@@ -71,6 +76,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PackageTrackingManagement.Domain\PackageTrackingManagement.Domain.fsproj">
