--- a/PackageTrackingManagement.Persistence/packages.config
+++ b/PackageTrackingManagement.Persistence/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Data" version="2.3.2" targetFramework="net461" />
   <package id="Npgsql" version="3.1.9" targetFramework="net45" requireReinstallation="true" />
   <package id="SQLProvider" version="1.0.41" targetFramework="net461" />
 </packages>
