--- a/PackageTrackingManagement.Web/PackageTrackingManagement.Web.fsproj
+++ b/PackageTrackingManagement.Web/PackageTrackingManagement.Web.fsproj
@@ -56,6 +56,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Application.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
