--- a/PackageTrackingManagement.Domain/PackageTrackingManagement.Domain.fsproj
+++ b/PackageTrackingManagement.Domain/PackageTrackingManagement.Domain.fsproj
@@ -62,7 +62,9 @@
     <Compile Include="Railroad.fs" />
     <Compile Include="Sentences.fs" />
     <Compile Include="Models.fs" />
-    <Compile Include="Commands.fs" />
+    <Compile Include="Commands.Global.fs" />
+    <Compile Include="Commands.User.fs" />
+    <Compile Include="Commands.Package.fs" />
     <Compile Include="Queries.fs" />
     <Content Include="App.config" />
     <Content Include="paket.references" />
