--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "moment": "^2.17.1",
     "semantic-ui-css": "^2.2.4",
     "vue": "^2.1.0",
+    "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.3"
   },
