--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "moment": "^2.17.1",
     "semantic-ui-css": "^2.2.4",
+    "toastr": "^2.1.2",
     "vue": "^2.1.0",
     "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
