--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -12,13 +12,17 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "moment": "^2.17.1",
     "semantic-ui-css": "^2.2.4",
     "toastr": "^2.1.2",
+    "v-tooltip": "^1.1.2",
     "vue": "^2.1.0",
+    "vue-google-maps": "^0.1.21",
     "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.1.3"
+    "vue-router": "^2.1.3",
+    "vue2-google-maps": "^0.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
