--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
+    "postinstall": "npm run build",
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
