--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "marker-clusterer-plus": "^2.1.4",
+    "markerclustererplus": "^2.1.4",
     "moment": "^2.17.1",
     "semantic-ui-css": "^2.2.4",
     "toastr": "^2.1.2",
     "v-tooltip": "^1.1.2",
-    "vue": "^2.1.0",
+    "vue": "^2.1.10",
     "vue-google-maps": "^0.1.21",
     "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
