--- a/PackageTrackingManagement.Web/PackageTrackingManagement.Web.fsproj
+++ b/PackageTrackingManagement.Web/PackageTrackingManagement.Web.fsproj
@@ -65,6 +65,9 @@
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Owin.Cors">
+      <HintPath>..\packages\Microsoft.Owin.Cors\lib\net45\Microsoft.Owin.Cors.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
