--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -21,6 +21,7 @@
     "toastr": "^2.1.2",
     "v-tooltip": "^1.1.2",
     "vue": "^2.1.10",
+    "vue-chartjs": "^2.3.3",
     "vue-google-maps": "^0.1.21",
     "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
