--- a/package-tracking-management-view/package.json
+++ b/package-tracking-management-view/package.json
@@ -26,9 +26,7 @@
     "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.3",
-    "vue2-google-maps": "^0.5.2"
-  },
-  "devDependencies": {
+    "vue2-google-maps": "^0.5.2",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
