--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "start": { 
-  	"postinstall": "cd package-tracking-management-view && npm install" 
+  	"postinstall": "cd ./package-tracking-management-view && npm install" 
   },
   "author": "",
   "license": "ISC"
