--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "cd ./package-tracking-management-view && npm install"
   },
   "start": { 
   	"postinstall": "cd ./package-tracking-management-view && npm install" 
