--- a/PackageTrackingManagement.Persistence/PackageTrackingManagement.Persistence.fsproj
+++ b/PackageTrackingManagement.Persistence/PackageTrackingManagement.Persistence.fsproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="PgSqlLiterals.fs" />
     <Compile Include="PgSqlPersistence.fs" />
     <Compile Include="PgSqlProvider.fs" />
     <Compile Include="PgSqlUserPersistence.fs" />    
