refactoring connection string sources

--- a/PackageTrackingManagement.Persistence/PgSqlLiterals.fs.example
+++ b/PackageTrackingManagement.Persistence/PgSqlLiterals.fs.example
@@ -1,4 +1,4 @@
 module PgSqlLiterals
 
 [<Literal>]
-let internal ConnectionString = @"User ID=homestead;Password=secret;Host=192.168.36.36;Port=5432;Database=package_tracking_management;"
+let internal ConnectionString = @"--connectionString--"
